--- a/templates/cpp_def.h.j2
+++ b/templates/cpp_def.h.j2
@@ -9,8 +9,9 @@ namespace {{namespace}} {
 {% endif %}
 
 const uint32_t REGISTER_COUNT = {{registers|length}};
+const uint32_t SEGMENT_END = 0xFFFFFFFF;
 
-enum Instruction { {% for i in instructions %}
+enum Opcode { {% for i in instructions %}
     {{i.internal_name}} = {{i.encoding}},{% endfor %}
 };
 
@@ -18,8 +19,8 @@ enum Register { {% for r in registers %}
     {{r}} = {{loop.index}},{% endfor %}
 };
 
-Instruction get_instr(uint32_t instr);
-std::string instr_to_string(Instruction instr);
+Opcode get_opcode(uint32_t instr);
+std::string opcode_to_string(Opcode opcode);
 uint32_t get_label(uint32_t instr);
 uint32_t get_u24(uint32_t instr);
 uint16_t get_u16(uint32_t instr);
