--- a/templates/cpp_def.cpp.j2
+++ b/templates/cpp_def.cpp.j2
@@ -6,12 +6,12 @@
 namespace {{namespace}} {
 {% endif %} 
 
-Instruction get_instr(uint32_t instr) {
-    return (Instruction)(instr >> 24);
+Opcode get_opcode(uint32_t instr) {
+    return (Opcode)(instr >> 24);
 }
 
-std::string instr_to_string(Instruction instr) {
-    switch(instr) { {% for i in instructions %}
+std::string opcode_to_string(Opcode opcode) {
+    switch(opcode) { {% for i in instructions %}
         case {{i.internal_name}}: return "{{i.internal_name}}";{% endfor %}
         default: assert(false);
     }
