--- a/templates/cpp_def.h.j2
+++ b/templates/cpp_def.h.j2
@@ -21,7 +21,8 @@ const uint32_t FLAG_COUNT = {{flags|length}};
 const uint32_t SEGMENT_END = 0xFFFFFFFF;
 const uint32_t MAX_OPCODE_LEN = {{max_opcode_len}};
 const std::string SEGMENT_END_WIDTH_STRING = "{{ 'SEG_END'.rjust(max_opcode_len) }}";
-const uint32_t MEM_ACCESS_WIDTH = 64; //Used by DMA and mem heirarchy
+constexpr uint32_t MEM_SIZE = {{mem_size_mb}} * 1024 * 1024;
+const uint32_t MEM_ACCESS_WIDTH = {{mem_access_width_bytes}}; //Used by DMA and mem heirarchy
 
 //Branch Prediction
 const uint32_t BHT_SIZE = 16;
